[gd_scene load_steps=4 format=3 uid="uid://c1p1lg8vh5nr8"]

[ext_resource type="Script" path="res://Scenes/Game/Stock/stock.gd" id="1_j4s0x"]
[ext_resource type="Texture2D" uid="uid://bl57cocs385s5" path="res://Assets/Background/PopUps/stock_pop_up_placeholder.png" id="2_0vtdn"]
[ext_resource type="AudioStream" uid="uid://cfahc2ay48r2q" path="res://Assets/Audio/Stock/grab.wav" id="3_7vlr8"]

[node name="Stock" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_j4s0x")

[node name="StockPopUpPlaceholder" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -960.0
offset_top = -604.0
offset_right = 960.0
offset_bottom = 476.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_0vtdn")

[node name="Base" type="Control" parent="."]
anchors_preset = 0

[node name="WaterButton" type="Button" parent="Base"]
layout_mode = 0
offset_left = 750.0
offset_top = 864.0
offset_right = 836.0
offset_bottom = 895.0
text = "Water"

[node name="MilkButton" type="Button" parent="Base"]
layout_mode = 0
offset_left = 626.0
offset_top = 863.0
offset_right = 731.0
offset_bottom = 894.0
text = "Milk
"

[node name="WineButton" type="Button" parent="Base"]
layout_mode = 0
offset_left = 1210.0
offset_top = 854.0
offset_right = 1315.0
offset_bottom = 885.0
text = "Wine"

[node name="Plant" type="Control" parent="."]
anchors_preset = 0

[node name="BelladonaButton" type="Button" parent="Plant"]
layout_mode = 0
offset_left = 664.0
offset_top = 390.0
offset_right = 767.0
offset_bottom = 421.0
text = "Belladona"

[node name="LavenderButton" type="Button" parent="Plant"]
layout_mode = 0
offset_left = 796.0
offset_top = 393.0
offset_right = 899.0
offset_bottom = 424.0
text = "Lavander"

[node name="MyrrthButton" type="Button" parent="Plant"]
layout_mode = 0
offset_left = 762.0
offset_top = 612.0
offset_right = 865.0
offset_bottom = 643.0
text = "Myrrh"

[node name="Ore" type="Control" parent="."]
anchors_preset = 0

[node name="GoldButton" type="Button" parent="Ore"]
layout_mode = 0
offset_left = 1181.0
offset_top = 615.0
offset_right = 1286.0
offset_bottom = 646.0
text = "Gold"

[node name="SulfurButton" type="Button" parent="Ore"]
layout_mode = 0
offset_left = 885.0
offset_top = 616.0
offset_right = 953.0
offset_bottom = 647.0
text = "Sulfur"

[node name="Flask" type="Control" parent="."]
anchors_preset = 0

[node name="ButtonA" type="Button" parent="Flask"]
layout_mode = 0
offset_left = 1046.0
offset_top = 784.0
offset_right = 1166.0
offset_bottom = 812.0
text = "Flask A"

[node name="ButtonB" type="Button" parent="Flask"]
layout_mode = 0
offset_left = 1046.0
offset_top = 832.0
offset_right = 1166.0
offset_bottom = 863.0
text = "Flask B"

[node name="ButtonC" type="Button" parent="Flask"]
layout_mode = 0
offset_left = 1046.0
offset_top = 880.0
offset_right = 1166.0
offset_bottom = 911.0
text = "Flask C"

[node name="MoveLeft_Stock" type="Button" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 32.0
offset_top = -45.5
offset_right = 74.0
offset_bottom = 45.5
grow_vertical = 2
theme_override_font_sizes/font_size = 60
text = "<"

[node name="MoveRight_Stock" type="Button" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -74.0
offset_top = -45.5
offset_right = -32.0
offset_bottom = 45.5
grow_horizontal = 0
grow_vertical = 2
theme_override_font_sizes/font_size = 60
text = ">"

[node name="Flavor" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -104.0
offset_top = 32.0
offset_right = 104.0
offset_bottom = 97.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 50
text = "My stock"

[node name="PickUp" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_7vlr8")

[connection signal="pressed" from="Base/WaterButton" to="." method="_pick_up" binds= ["Water"]]
[connection signal="pressed" from="Base/MilkButton" to="." method="_pick_up" binds= ["Milk"]]
[connection signal="pressed" from="Base/WineButton" to="." method="_pick_up" binds= ["Wine"]]
[connection signal="pressed" from="Plant/BelladonaButton" to="." method="_pick_up" binds= ["Belladona"]]
[connection signal="pressed" from="Plant/LavenderButton" to="." method="_pick_up" binds= ["Lavender"]]
[connection signal="pressed" from="Plant/MyrrthButton" to="." method="_pick_up" binds= ["Myrrh"]]
[connection signal="pressed" from="Ore/GoldButton" to="." method="_pick_up" binds= ["Gold"]]
[connection signal="pressed" from="Ore/SulfurButton" to="." method="_pick_up" binds= ["Sulfur"]]
[connection signal="pressed" from="Flask/ButtonA" to="." method="_pick_up" binds= ["A"]]
[connection signal="pressed" from="Flask/ButtonB" to="." method="_pick_up" binds= ["B"]]
[connection signal="pressed" from="Flask/ButtonC" to="." method="_pick_up" binds= ["C"]]
[connection signal="pressed" from="MoveLeft_Stock" to="." method="_on_move_left_stock_pressed"]
[connection signal="pressed" from="MoveRight_Stock" to="." method="_on_move_right_stock_pressed"]
